# 1.7.0

* Support attributes in HTML paths in style mappings.

* Drop support for Python 2.7, Python 3.5 and Python 3.6.

# 1.6.0

* Support merged paragraphs when revisions are tracked.

# 1.5.1

* Add a pyproject.toml to add an explicit build dependency on setuptools.

# 1.5.0

* Only use the alt text of image elements as a fallback. If an alt attribute is
  returned from the function passed to mammoth.images.img_element, that value
  will now be preferred to the alt text of the image element.

# 1.4.19

* Ignore w:u elements when w:val is missing.

# 1.4.18

* Emit warning instead of throwing exception when image file cannot be found for
  a:blip elements.

# 1.4.17

* When extracting raw text, convert tab elements to tab characters.

* Handle internal hyperlinks created with complex fields.

# 1.4.16

* Handle w:num with invalid w:abstractNumId.

# 1.4.15

* Convert symbols in supported fonts to corresponding Unicode characters.

# 1.4.14

* Support numbering defined by paragraph style.

# 1.4.13

* Add style mapping for all caps.

# 1.4.12

* Handle underline elements where w:val is "none".

# 1.4.11

* Read font size for runs.
* Support soft hyphens.

# 1.4.10

* Update supported Python versions to 2.7 and 3.4 to 3.8.

# 1.4.9

* Improve list support by following w:numStyleLink in w:abstractNum.

# 1.4.8

* Preserve empty table rows.

# 1.4.7

* Always write files as UTF-8 in the CLI.

# 1.4.6

* Fix: default style mappings caused footnotes, endnotes and comments
  containing multiple paragraphs to be converted into a single paragraph.

# 1.4.5

* Read the children of v:rect elements.

# 1.4.4

* Parse paragraph indents.

* Read part paths using relationships. This improves support for documents
  created by Word Online.

# 1.4.3

* Add style mapping for small caps.

* Add style mapping for tables.

# 1.4.2

* Read children of v:group elements.

# 1.4.1

* Read w:noBreakHyphen elements as non-breaking hyphen characters.

# 1.4.0
