@@ -2,6 +2,8 @@
 
 * Support attributes in HTML paths in style mappings.
 
+* Improve error message when failing to find the body element in a document.
+
 * Drop support for Python 2.7, Python 3.5 and Python 3.6.
 
 # 1.6.0
